; ModuleID = '/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_opendir.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_opendir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_9__ = type { i32 }
%struct._reent = type { i32 }

@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_10__* @opendir(i8* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca %struct._reent*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_10__*, align 8
  store i8* %0, i8** %3, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = call %struct.TYPE_9__* @get_vfs_for_path(i8* %9)
  store %struct.TYPE_9__* %10, %struct.TYPE_9__** %4, align 8
  %11 = call %struct._reent* (...) @__getreent()
  store %struct._reent* %11, %struct._reent** %5, align 8
  %12 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %13 = icmp eq %struct.TYPE_9__* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @ENOENT, align 4
  store i32 %15, i32* %6, align 4
  store %struct.TYPE_10__* null, %struct.TYPE_10__** %2, align 8
  br label %35

16:                                               ; preds = %1
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %18 = load i8*, i8** %3, align 8
  %19 = call i8* @translate_path(%struct.TYPE_9__* %17, i8* %18)
  store i8* %19, i8** %7, align 8
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %21 = load %struct._reent*, %struct._reent** %5, align 8
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @CHECK_AND_CALLP(%struct.TYPE_10__* %20, %struct._reent* %21, %struct.TYPE_9__* %22, %struct.TYPE_10__* (i8*)* @opendir, i8* %23)
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %26 = icmp ne %struct.TYPE_10__* %25, null
  br i1 %26, label %27, label %33

27:                                               ; preds = %16
  %28 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %32 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 4
  br label %33

33:                                               ; preds = %27, %16
  %34 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  store %struct.TYPE_10__* %34, %struct.TYPE_10__** %2, align 8
  br label %35

35:                                               ; preds = %33, %14
  %36 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  ret %struct.TYPE_10__* %36
}

declare dso_local %struct.TYPE_9__* @get_vfs_for_path(i8*) #1

declare dso_local %struct._reent* @__getreent(...) #1

declare dso_local i8* @translate_path(%struct.TYPE_9__*, i8*) #1

declare dso_local i32 @CHECK_AND_CALLP(%struct.TYPE_10__*, %struct._reent*, %struct.TYPE_9__*, %struct.TYPE_10__* (i8*)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
